--- a/css/styles-light.scss
+++ b/css/styles-light.scss
@@ -11,13 +11,13 @@ $background_transparent: #1E1E1E7F;
 }
 
 @mixin set_button{
-    height: 2em;
+    height: 2rem;
     padding-left:auto;
     padding-right:auto;
     color: $text_main;
     background-color: $background;
     border: 1px solid $text_main;
-    margin: 0.4em;
+    margin: 0.4rem;
     cursor: pointer;
 }
 
@@ -27,7 +27,7 @@ $background_transparent: #1E1E1E7F;
     text-decoration: none;
     background-color: $background;
     color: $text_main;
-    font-size: 1em;
+    font-size: 1rem;
     text-align: left;
     padding: 0;
     cursor: pointer;
@@ -42,7 +42,7 @@ $background_transparent: #1E1E1E7F;
 }
 
 *{
-    font-family: Consola, monospace;
+    font-family: Consolas, monospace;
 }
 body{
     margin: 0;
@@ -64,6 +64,7 @@ body{
 
             .runner {
                 color: $text_main;
+                cursor: pointer;
             }
 
             .settings{
@@ -83,7 +84,7 @@ body{
                                 
                 .dropdown{
                     display: none;
-                    margin-top: 0.5em;
+                    margin-top: 0.5rem;
                     position: absolute;
                     z-index: 1;
                     right: 9%;
@@ -137,7 +138,7 @@ body{
                     }
 
                     #space{
-                        height: 1em;
+                        height: 1rem;
                     }
                 }                
             }
@@ -153,7 +154,7 @@ body{
             justify-content: space-between;
 
             .runner {
-                font-size: 1em;
+                font-size: 1rem;
                 color: $text_main;
             }
 
@@ -174,7 +175,7 @@ body{
 
                 .dropdown{
                     display: none;
-                    margin-top: 0.3em;
+                    margin-top: 0.3rem;
                     position: absolute;
                     z-index: 1;
                     right: 9%;
@@ -314,7 +315,7 @@ body{
 p{
     color: $text_main;
     font-family: Consolas, monospace;
-    font-size: 1em;    
+    font-size: 1rem;    
 }
 a{
     color: $text_class;
@@ -357,7 +358,7 @@ a{
     }
     .main_wrapper{
         display: grid;
-        grid-template-columns: 1fr 2fr 1rem 2fr 1rem 2fr 1rem 2fr 1fr;
+        grid-template-columns: 1fr 2fr 1.2rem 2fr 1.2rem 2fr 1.2rem 2fr 1fr;
         grid-template-rows: 2rem 2.5rem 2.5rem 2.5rem 1fr ;
 
         .head_content{
@@ -373,11 +374,11 @@ a{
                 columns: 1;
                 display: flex;
                 flex-direction: column;
-                //margin-top: 1.5em;
         
                 .menu_btn{
                     @include remove_default_btn();
-                    margin: 0.2em 0;                
+                    margin: 0 0 1.2rem 0;
+                    padding: 0 0 0.03rem 0.2rem;
                 }
         
                 .menu_btn:focus{
@@ -395,11 +396,12 @@ a{
         } 
         
         #main_content{
-            grid-column: 4/9;
+            grid-column: 4;
             grid-row: 4;
 
             p{
-                font-size: 1em;
+                font-size: 1rem;
+                line-height: 1.2rem;
             }
         }
 
@@ -409,8 +411,8 @@ a{
             grid-row: 3/6;
 
             .presentation{
-                display: grid;
-                grid-template-columns: 1fr 2fr 1rem 2fr 1rem 2fr 1rem 2fr 1fr;
+                display: none;
+                grid-template-columns: 1fr 2fr 1.2rem 2fr 1.2rem 2fr 1.2rem 2fr 1fr;
                 z-index: -1;
 
                 .transparent{
@@ -419,11 +421,15 @@ a{
 
                 .pres_text{
                     grid-column: 4;
+                    
 
                     p{
-                        font-size: 1em;
+                        font-size: 1rem;
                         background-color: $background;
                         color: $text_main;
+                        line-height: 1.2rem;
+                        padding: 0 0 0 0.2rem;
+                        margin: 0 0 1.2rem 0;
                     }
                 }
             }
