--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 * {
-  font-family: Consola, monospace;
+  font-family: Consolas, monospace;
 }
 
 body {
@@ -39,6 +39,7 @@ body {
 
 .main_wrapper .head_content header .runner {
   color: #FFFFFF;
+  cursor: pointer;
 }
 
 .main_wrapper .head_content header .settings #settings_btn {
@@ -59,7 +60,7 @@ body {
 
 .main_wrapper .head_content header .settings .dropdown {
   display: none;
-  margin-top: 0.5em;
+  margin-top: 0.5rem;
   position: absolute;
   z-index: 1;
   right: 9%;
@@ -67,13 +68,13 @@ body {
 }
 
 .main_wrapper .head_content header .settings .dropdown .set_btn {
-  height: 2em;
+  height: 2rem;
   padding-left: auto;
   padding-right: auto;
   color: #FFFFFF;
   background-color: #1E1E1E;
   border: 1px solid #FFFFFF;
-  margin: 0.4em;
+  margin: 0.4rem;
   cursor: pointer;
 }
 
@@ -87,13 +88,13 @@ body {
 }
 
 .main_wrapper .head_content header .settings .dropdown .set_btn_dark {
-  height: 2em;
+  height: 2rem;
   padding-left: auto;
   padding-right: auto;
   color: #FFFFFF;
   background-color: #1E1E1E;
   border: 1px solid #FFFFFF;
-  margin: 0.4em;
+  margin: 0.4rem;
   cursor: pointer;
   color: #FFFFFF;
   background-color: #1E1E1E;
@@ -111,13 +112,13 @@ body {
 }
 
 .main_wrapper .head_content header .settings .dropdown .set_btn_light {
-  height: 2em;
+  height: 2rem;
   padding-left: auto;
   padding-right: auto;
   color: #FFFFFF;
   background-color: #1E1E1E;
   border: 1px solid #FFFFFF;
-  margin: 0.4em;
+  margin: 0.4rem;
   cursor: pointer;
   color: #1E1E1E;
   background-color: #FFFFFF;
@@ -135,7 +136,7 @@ body {
 }
 
 .main_wrapper .head_content header .settings .dropdown #space {
-  height: 1em;
+  height: 1rem;
 }
 
 .main_wrapper #inner_content {
@@ -160,7 +161,7 @@ body {
 }
 
 .main_wrapper #inner_content #mob_menu .runner {
-  font-size: 1em;
+  font-size: 1rem;
   color: #FFFFFF;
 }
 
@@ -182,7 +183,7 @@ body {
 
 .main_wrapper #inner_content #mob_menu #menu_bar .dropdown {
   display: none;
-  margin-top: 0.3em;
+  margin-top: 0.3rem;
   position: absolute;
   z-index: 1;
   right: 9%;
@@ -190,13 +191,13 @@ body {
 }
 
 .main_wrapper #inner_content #mob_menu #menu_bar .dropdown .mob_btn {
-  height: 2em;
+  height: 2rem;
   padding-left: auto;
   padding-right: auto;
   color: #FFFFFF;
   background-color: #1E1E1E;
   border: 1px solid #FFFFFF;
-  margin: 0.4em;
+  margin: 0.4rem;
   cursor: pointer;
 }
 
@@ -362,7 +363,7 @@ body {
 p {
   color: #FFFFFF;
   font-family: Consolas, monospace;
-  font-size: 1em;
+  font-size: 1rem;
 }
 
 a {
@@ -386,8 +387,8 @@ a {
   .main_wrapper {
     display: -ms-grid;
     display: grid;
-    -ms-grid-columns: 1fr 2fr 1rem 2fr 1rem 2fr 1rem 2fr 1fr;
-        grid-template-columns: 1fr 2fr 1rem 2fr 1rem 2fr 1rem 2fr 1fr;
+    -ms-grid-columns: 1fr 2fr 1.2rem 2fr 1.2rem 2fr 1.2rem 2fr 1fr;
+        grid-template-columns: 1fr 2fr 1.2rem 2fr 1.2rem 2fr 1.2rem 2fr 1fr;
     -ms-grid-rows: 2rem 2.5rem 2.5rem 2.5rem 1fr;
         grid-template-rows: 2rem 2.5rem 2.5rem 2.5rem 1fr;
   }
@@ -421,11 +422,12 @@ a {
     text-decoration: none;
     background-color: #1E1E1E;
     color: #FFFFFF;
-    font-size: 1em;
+    font-size: 1rem;
     text-align: left;
     padding: 0;
     cursor: pointer;
-    margin: 0.2em 0;
+    margin: 0 0 1.2rem 0;
+    padding: 0 0 0.03rem 0.2rem;
   }
   .main_wrapper #inner_content #menu_div .menu_btn:focus {
     outline: none;
@@ -438,13 +440,13 @@ a {
   }
   .main_wrapper #main_content {
     -ms-grid-column: 4;
-    -ms-grid-column-span: 5;
-    grid-column: 4/9;
+    grid-column: 4;
     -ms-grid-row: 4;
     grid-row: 4;
   }
   .main_wrapper #main_content p {
-    font-size: 1em;
+    font-size: 1rem;
+    line-height: 1.2rem;
   }
   .main_wrapper #main_works {
     display: none;
@@ -456,10 +458,9 @@ a {
     grid-row: 3/6;
   }
   .main_wrapper #main_works .presentation {
-    display: -ms-grid;
-    display: grid;
-    -ms-grid-columns: 1fr 2fr 1rem 2fr 1rem 2fr 1rem 2fr 1fr;
-        grid-template-columns: 1fr 2fr 1rem 2fr 1rem 2fr 1rem 2fr 1fr;
+    display: none;
+    -ms-grid-columns: 1fr 2fr 1.2rem 2fr 1.2rem 2fr 1.2rem 2fr 1fr;
+        grid-template-columns: 1fr 2fr 1.2rem 2fr 1.2rem 2fr 1.2rem 2fr 1fr;
     z-index: -1;
   }
   .main_wrapper #main_works .presentation .transparent {
@@ -472,9 +473,12 @@ a {
     grid-column: 4;
   }
   .main_wrapper #main_works .presentation .pres_text p {
-    font-size: 1em;
+    font-size: 1rem;
     background-color: #1E1E1E;
     color: #FFFFFF;
+    line-height: 1.2rem;
+    padding: 0 0 0 0.2rem;
+    margin: 0 0 1.2rem 0;
   }
 }
 /*# sourceMappingURL=styles.css.map */
