--- a/css/styles-light.css
+++ b/css/styles-light.css
@@ -480,5 +480,25 @@ a {
     padding: 0 0 0 0.2rem;
     margin: 0 0 1.2rem 0;
   }
+  .main_wrapper #main_works #slide_control {
+    margin: 0;
+    height: 80%;
+    width: 94vw;
+    left: 3%;
+    right: 3%;
+    -ms-flex-line-pack: center;
+        align-content: center;
+    -ms-flex-wrap: nowrap;
+        flex-wrap: nowrap;
+    z-index: -1;
+  }
+  .main_wrapper #main_works #slide_control button {
+    font-size: 2.5rem;
+  }
+  .main_wrapper #main_works #slide_control .dots {
+    width: 10%;
+    -ms-flex-item-align: end;
+        align-self: flex-end;
+  }
 }
 /*# sourceMappingURL=styles-light.css.map */
