--- a/css/styles-light.scss
+++ b/css/styles-light.scss
@@ -374,6 +374,7 @@ a{
                 columns: 1;
                 display: flex;
                 flex-direction: column;
+                //z-index: 1;
         
                 .menu_btn{
                     @include remove_default_btn();
@@ -431,6 +432,25 @@ a{
                         padding: 0 0 0 0.2rem;
                         margin: 0 0 1.2rem 0;
                     }
+                }
+            }
+
+            #slide_control{
+                margin: 0;
+                height: 80%;
+                width: 94vw;
+                left: 3%;
+                right: 3%;
+                align-content: center;
+                flex-wrap: nowrap;
+                z-index: -1;
+                
+                button{
+                    font-size: 2.5rem;
+                }
+                .dots{
+                    width: 10%;
+                    align-self: flex-end;
                 }
             }
         }
