--- a/css/styles-light.css
+++ b/css/styles-light.css
@@ -226,6 +226,14 @@ body {
   font-size: 0.85rem;
 }
 
+.main_wrapper #main_content #main_animation {
+  font-size: 16px;
+  width: 176px;
+  color: #1E1E1E;
+  line-height: 16px;
+  margin: auto;
+}
+
 .main_wrapper #main_content #main_about {
   display: none;
 }
