--- a/css/styles-light.scss
+++ b/css/styles-light.scss
@@ -210,6 +210,14 @@ body{
             font-size: 0.85rem;
         }
 
+        #main_animation{
+            font-size: 16px;
+            width: 176px;
+            color: $text_main;
+            line-height: 16px;
+            margin: auto;
+        }
+
         #main_about{
             display: none;
         }        
