--- a/css/styles-light.css
+++ b/css/styles-light.css
@@ -12,8 +12,8 @@ body {
   display: grid;
   -ms-grid-columns: 1fr 2fr 2fr 2fr 1fr 1fr 1fr;
       grid-template-columns: 1fr 2fr 2fr 2fr 1fr 1fr 1fr;
-  -ms-grid-rows: 2rem 2.5rem 2.5rem 2.5rem 1fr;
-      grid-template-rows: 2rem 2.5rem 2.5rem 2.5rem 1fr;
+  -ms-grid-rows: 2rem 2.4rem 2.4rem 2.4rem 1fr;
+      grid-template-rows: 2rem 2.4rem 2.4rem 2.4rem 1fr;
 }
 
 .main_wrapper .head_content {
@@ -50,8 +50,8 @@ body {
 }
 
 .main_wrapper .head_content header .settings #settings_btn img {
-  max-height: 1.5rem;
-  min-width: 1.5rem;
+  max-height: 1.2rem;
+  min-width: 1.2rem;
 }
 
 .main_wrapper .head_content header .settings #settings_btn:focus {
@@ -173,8 +173,8 @@ body {
 }
 
 .main_wrapper #inner_content #mob_menu #menu_bar #mob_menu_btn img {
-  max-height: 1.5rem;
-  min-width: 1.5rem;
+  max-height: 1.2rem;
+  min-width: 1.2rem;
 }
 
 .main_wrapper #inner_content #mob_menu #menu_bar #mob_menu_btn:focus {
@@ -229,7 +229,7 @@ body {
 .main_wrapper #main_content #main_animation {
   font-size: 16px;
   min-width: 176px;
-  max-width: 200px;
+  max-width: 180px;
   color: #1E1E1E;
   line-height: 16px;
   margin: auto;
@@ -263,8 +263,9 @@ body {
   background-size: cover;
   -ms-grid-columns: 1fr 2fr 2fr 2fr 1fr 1fr 1fr;
       grid-template-columns: 1fr 2fr 2fr 2fr 1fr 1fr 1fr;
-  -ms-grid-rows: 2.5rem 1fr;
-      grid-template-rows: 2.5rem 1fr;
+  -ms-grid-rows: 2.4rem 1fr;
+      grid-template-rows: 2.4rem 1fr;
+  z-index: -2;
 }
 
 .main_wrapper #main_works .presentation .transparent {
@@ -274,7 +275,9 @@ body {
   -ms-grid-row: 1;
   -ms-grid-row-span: 2;
   grid-row: 1/3;
-  background-color: #1E1E1E7F;
+  opacity: 0.6;
+  background-color: #1E1E1E;
+  z-index: -1;
 }
 
 .main_wrapper #main_works .presentation .pres_text {
@@ -380,6 +383,31 @@ a {
   text-decoration: none;
 }
 
+.fade {
+  animation-name: fade;
+  animation-duration: 1.5s;
+  -webkit-animation-name: fade;
+  -webkit-animation-duration: 1.5s;
+}
+
+@-webkit-keyframes fade {
+  from {
+    opacity: .1;
+  }
+  to {
+    opacity: .6;
+  }
+}
+
+@keyframes fade {
+  from {
+    opacity: .1;
+  }
+  to {
+    opacity: .6;
+  }
+}
+
 @media screen and (min-width: 641px) {
   .main_wrapper .head_content header .settings .dropdown {
     margin-top: 0;
@@ -398,8 +426,8 @@ a {
     display: grid;
     -ms-grid-columns: 1fr 2fr 1.2rem 2fr 1.2rem 2fr 1.2rem 2fr 1fr;
         grid-template-columns: 1fr 2fr 1.2rem 2fr 1.2rem 2fr 1.2rem 2fr 1fr;
-    -ms-grid-rows: 2rem 2.5rem 2.5rem 2.5rem 1fr;
-        grid-template-rows: 2rem 2.5rem 2.5rem 2.5rem 1fr;
+    -ms-grid-rows: 2rem 2.4rem 2.4rem 2.4rem 1fr;
+        grid-template-rows: 2rem 2.4rem 2.4rem 2.4rem 1fr;
   }
   .main_wrapper .head_content {
     -ms-grid-column: 2;
@@ -432,6 +460,7 @@ a {
     background-color: #FFFFFF;
     color: #1E1E1E;
     font-size: 1rem;
+    text-height: 1.2rem;
     text-align: left;
     padding: 0;
     cursor: pointer;
@@ -457,6 +486,9 @@ a {
     font-size: 1rem;
     line-height: 1.2rem;
   }
+  .main_wrapper #main_content #main_animation {
+    margin: 0;
+  }
   .main_wrapper #main_works {
     display: none;
     -ms-grid-column: 1;
@@ -476,6 +508,7 @@ a {
     -ms-grid-column: 1;
     -ms-grid-column-span: 9;
     grid-column: 1/10;
+    background-color: none;
   }
   .main_wrapper #main_works .presentation .pres_text {
     -ms-grid-column: 4;
@@ -490,8 +523,9 @@ a {
     margin: 0 0 1.2rem 0;
   }
   .main_wrapper #main_works #slide_control {
+    pointer-events: none;
     margin: 0;
-    height: 80%;
+    height: 85%;
     width: 94vw;
     left: 3%;
     right: 3%;
@@ -502,6 +536,7 @@ a {
     z-index: -1;
   }
   .main_wrapper #main_works #slide_control button {
+    pointer-events: auto;
     font-size: 2.5rem;
   }
   .main_wrapper #main_works #slide_control .dots {
