--- a/css/styles-light.scss
+++ b/css/styles-light.scss
@@ -28,6 +28,7 @@ $background_transparent: #1E1E1E7F;
     background-color: $background;
     color: $text_main;
     font-size: 1rem;
+    text-height: 1.2rem;
     text-align: left;
     padding: 0;
     cursor: pointer;
@@ -51,7 +52,7 @@ body{
 .main_wrapper{
     display: grid;
     grid-template-columns: 1fr 2fr 2fr 2fr 1fr 1fr 1fr;
-    grid-template-rows: 2rem 2.5rem 2.5rem 2.5rem 1fr ;
+    grid-template-rows: 2rem 2.4rem 2.4rem 2.4rem 1fr ;
 
     .head_content{
         grid-column: 2/7; 
@@ -73,8 +74,8 @@ body{
                     @include drop_btn();
 
                     img{
-                        max-height: 1.5rem;
-                        min-width: 1.5rem;
+                        max-height: 1.2rem;
+                        min-width: 1.2rem;
                     }
                 }
 
@@ -164,8 +165,8 @@ body{
                     @include drop_btn();
 
                     img{
-                        max-height: 1.5rem;
-                        min-width: 1.5rem;
+                        max-height: 1.2rem;
+                        min-width: 1.2rem;
                     }
                 }   
                 
@@ -213,7 +214,7 @@ body{
         #main_animation{
             font-size: 16px;
             min-width: 176px;
-            max-width: 200px;
+            max-width: 180px;
             color: $text_main;
             line-height: 16px;
             margin: auto;
@@ -242,18 +243,21 @@ body{
             background-repeat: no-repeat;
             background-size:cover;
             grid-template-columns: 1fr 2fr 2fr 2fr 1fr 1fr 1fr;
-            grid-template-rows: 2.5rem 1fr;
+            grid-template-rows: 2.4rem 1fr;   
+            z-index: -2;         
             
             .transparent{
                 grid-column: 1/8;
-                grid-row: 1/3;            
-                background-color: $background_transparent;            
+                grid-row: 1/3;   
+                opacity: 0.6;  
+                background-color: #1E1E1E;    
+                z-index: -1;        
             }
     
             .pres_text{
                 display: block;
                 grid-column: 2/7;
-                grid-row: 2;     
+                grid-row: 2;  
                 
                 p{
                     margin-top: 0;
@@ -331,6 +335,23 @@ a{
     text-decoration: none;
 }
 
+.fade{
+    animation-name: fade;
+    animation-duration: 1.5s;
+    -webkit-animation-name: fade;
+    -webkit-animation-duration: 1.5s;
+}
+
+@-webkit-keyframes fade {
+    from {opacity: .1}
+    to {opacity: .6}
+}
+
+@keyframes fade{
+    from{opacity: .1}
+    to{opacity: .6}
+}
+
 @media screen and (min-width: 641px){
     .main_wrapper{
 
@@ -368,7 +389,7 @@ a{
     .main_wrapper{
         display: grid;
         grid-template-columns: 1fr 2fr 1.2rem 2fr 1.2rem 2fr 1.2rem 2fr 1fr;
-        grid-template-rows: 2rem 2.5rem 2.5rem 2.5rem 1fr ;
+        grid-template-rows: 2rem 2.4rem 2.4rem 2.4rem 1fr ;
 
         .head_content{
             grid-column: 2/9; 
@@ -383,7 +404,6 @@ a{
                 columns: 1;
                 display: flex;
                 flex-direction: column;
-                //z-index: 1;
         
                 .menu_btn{
                     @include remove_default_btn();
@@ -413,6 +433,10 @@ a{
                 font-size: 1rem;
                 line-height: 1.2rem;
             }
+
+            #main_animation{
+                margin:0;
+            }
         }
 
         #main_works{
@@ -427,6 +451,7 @@ a{
 
                 .transparent{
                     grid-column: 1/10;
+                    background-color: none;
                 }
 
                 .pres_text{
@@ -445,8 +470,9 @@ a{
             }
 
             #slide_control{
+                pointer-events: none;
                 margin: 0;
-                height: 80%;
+                height: 85%;
                 width: 94vw;
                 left: 3%;
                 right: 3%;
@@ -455,6 +481,7 @@ a{
                 z-index: -1;
                 
                 button{
+                    pointer-events: auto;
                     font-size: 2.5rem;
                 }
                 .dots{
