--- a/css/styles-light.scss
+++ b/css/styles-light.scss
@@ -323,17 +323,17 @@ body{
             }
         }
         
-        //background-images for the different cases
+        //background-images for the different cases        
+        #audioplayer{
+            background-image: url(../img/audioplayer_screen.JPG);
+        }
+
         #quiz{
             background-image: url(../img/quiz_screen.JPG);
         }
 
         #old_portfolio{
             background-image: url(../img/old_portfolio_screen.JPG);
-        }
-
-        #placeholder{
-            background-image: url(../img/placeholder_screen.JPG);
         }
     }
 }
