--- a/css/styles.css
+++ b/css/styles.css
@@ -360,16 +360,16 @@ body {
   background-color: #4EC9B0;
 }
 
+.main_wrapper #main_works #audioplayer {
+  background-image: url(../img/audioplayer_screen.JPG);
+}
+
 .main_wrapper #main_works #quiz {
   background-image: url(../img/quiz_screen.JPG);
 }
 
 .main_wrapper #main_works #old_portfolio {
   background-image: url(../img/old_portfolio_screen.JPG);
-}
-
-.main_wrapper #main_works #placeholder {
-  background-image: url(../img/placeholder_screen.JPG);
 }
 
 p {
