--- a/css/styles-light.scss
+++ b/css/styles-light.scss
@@ -119,11 +119,11 @@ body{
                 }
 
                 @-webkit-keyframes fade_in {
-                    from{-webkit-opacity:0;}
-                    50%{-webkit-opacity:0;}
-                    to{-webkit-opacity:1;}
-                }                
-
+                    from{opacity:0;}
+                    50%{opacity:0;}
+                    to{opacity:1;}
+                }   
+                
                 .dropdown{
                     display: none;
                     position: absolute;
@@ -173,7 +173,6 @@ body{
                         grid-row: 8;
                         display: flex;
                         flex-direction: row;
-                        justify-content: space-between;
                         animation-name: fade_in;
                         animation-duration: 0.7s;
                         -webkit-animation-name: fade_in;
@@ -181,14 +180,14 @@ body{
 
                         .set_btn{
                             height: 2.4rem;
-                            width: 40%;
+                            width: 20%;
                             padding-left:auto;
                             padding-right:auto;
                             color: $text_main;
                             background-color: $background;
                             border: 1px solid $text_main;
                             outline: none;
-                            margin: 0;
+                            margin: 0 1rem 0 0;
                             cursor: pointer;
 
                             img{
@@ -352,7 +351,6 @@ a{
 }
 
 .fade{
-    //fade animation for transparent blocks in carousel
     animation-name: fade;
     animation-duration: 1.5s;
     -webkit-animation-name: fade;
@@ -360,8 +358,8 @@ a{
 }
 
 @-webkit-keyframes fade {
-    from {-webkit-opacity: .1}
-    to {-webkit-opacity: .6}
+    from {opacity: .1}
+    to {opacity: .6}
 }
 
 @keyframes fade{
